syntax = "proto3";

import "lzy/proto/priv/v2/lzy-auth.proto";
import "lzy/proto/priv/v2/lzy-servant.proto";
import "lzy/proto/priv/v2/lzy-server.proto";
import "lzy/proto/priv/v2/lzy-zygote.proto";
import "lzy/proto/priv/v2/lzy-task.proto";
import "lzy/proto/priv/v2/lzy-channel.proto";
import "lzy/proto/priv/v2/lzy-whiteboard.proto";
import "lzy/proto/priv/v2/lzy-fs.proto";

package lzy.proto.priv.v2;

option java_outer_classname = "Kharon";
option java_package = "ai.lzy.priv.v2";


service LzyKharon {
  // API for terminal
  rpc AttachTerminal (stream ServerCommand) returns (stream TerminalCommand);
  rpc WriteToInputSlot(stream SendSlotDataMessage) returns (ReceivedDataStatus);
  rpc OpenOutputSlot (SlotRequest) returns (stream Message);
}

message ServerCommand {
  oneof progress {
    AttachTerminal attachTerminal = 1;
    SlotAttach attach = 2;
    SlotDetach detach = 3;
    TerminalResponse terminalResponse = 4;
  }
}

message AttachTerminal {
  UserCredentials auth = 1;
}

message TerminalResponse {
  string commandId = 1;
  oneof content {
    SlotCommandStatus slotStatus = 2;
  }
}

message TerminalCommand {
  string commandId = 1;
  oneof command {
    CreateSlotRequest createSlot = 3;
    ConnectSlotRequest connectSlot = 4;
    DisconnectSlotRequest disconnectSlot = 5;
    StatusSlotRequest statusSlot = 6;
    DestroySlotRequest destroySlot = 7;
  }
}

message SendSlotDataMessage {
  oneof writeCommand {
    SlotRequest request = 1;
    Message message = 2;
  }
}

message ReceivedDataStatus {
  Status status = 1;
  int64 offset = 2;

  enum Status {
    OK = 0;
    FAILED = 1;
  }
}
